# project_templete

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  swagger.yml
apps/app1/: apps.py  tests.py
config/: settings.py  urls.py
envs/: .env.example  .env.prod.example
resource/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
resource/nginx/: nginx.conf
